--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-openid-connect": "^2.17.1",
+    "otpauth": "^9.2.1",
+    "request": "^2.88.2"
   }
 }
